[package]
name = "ClearHeadToDo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.24"
strum_macros = "0.24"
clap = { version = "4.1.1", features = ["derive"] }

[dependencies.uuid]
version = "1.2.2"
features = ["v4"]
