[package]
name = "ClearHeadToDo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indradb = "3.0.4"
clap = { version = "4.1.1", features = ["derive"] }

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_test = "1.0.152"
xdg = "2.4.1"

strum = "0.24"
strum_macros = "0.24"

[dependencies.uuid]
version = "1.2.2"
features = ["v1", "v4", "serde"]
