[package]
name = "clearhead_todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indradb-lib = "4.0.0"
petgraph = "0.6.3"
clap = { version = "4.1.1", features = ["derive"] }
chrono = "0.4.23"

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_test = "1.0.152"
dirs = "5.0.0"

strum = "0.24"
strum_macros = "0.24"
rstest = "0.18.1"

[dependencies.uuid]
version = "1.2.2"
features = ["v1", "v4", "serde"]
