[package]
name = "clear_head_todo_core"
version = "0.1.0"
authors = ["Mantis-Shrimp <dargondab9@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = { version = "15.1.0", features = ["serde"]}
csv = "1.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.83"
serde_test = "1.0.144"
tabled = "0.8.0"
indoc = "1.0.7"

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics",
    "serde",
]
