[package]
name = "relationships"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = { version = "15.1.0", features = ["serde"]}
serde = { version = "1.0.139", features = ["derive"] }
serde_test = "1.0.139"
serde_json = "1.0.83"
csv = "1.1.6"
tabled = "0.8.0"
indoc = "1.0.7"

[dependencies.uuid]
version = "1.1.2"
features = [
	"v4",                # Lets you generate random UUIDs
	"fast-rng",          # Use a faster (but still sufficiently random) RNG
	"macro-diagnostics", # Enable better diagnostics for compile-time UUID
	"serde"
]
