[package]
name = "task"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "*", features = ["derive"] }
im = "*"

[dependencies.uuid]
version = "*"
features = ["serde", "v4"]
